Added Detrend DEM

--- a/algorithms/hydrography/SelectConnectedComponents.yml
+++ b/algorithms/hydrography/SelectConnectedComponents.yml
@@ -1,4 +1,4 @@
-displayName: Select Upstream Links
+displayName: Select Connected Links
 groupId: hydrography
 group: Hydrography
 shortHelpString: NULL
