--- a/algorithms/terrain/FlowAccumulation.yml
+++ b/algorithms/terrain/FlowAccumulation.yml
@@ -1,6 +1,6 @@
-displayName: Topological Stream Burn
-groupId: hydrography
-group: Hydrography
+displayName: Flow Accumulation
+groupId: terrain
+group: Terrain Analysis
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
