--- a/algorithms/vector/SetMCoordFromMeasureField.yml
+++ b/algorithms/vector/SetMCoordFromMeasureField.yml
@@ -1,4 +1,4 @@
-displayName: Propage Measure Coordinate
+displayName: Set M Coordinate From Measure Field
 groupId: fctvectortools
 group: Tools for Vector
 shortHelpString: NULL
