--- a/algorithms/vector/RegularHexSamples.yml
+++ b/algorithms/vector/RegularHexSamples.yml
@@ -1,4 +1,4 @@
-displayName: Regular Hex Points
+displayName: Regular Hex Samples
 groupId: fctvectortools
 group: Tools for Vector
 shortHelpString: NULL
