--- a/algorithms/hydrography/LengthOrder.yml
+++ b/algorithms/hydrography/LengthOrder.yml
@@ -1,4 +1,4 @@
-displayName: Length-wise Stream Order
+displayName: Hack (Length-wise) Stream Order
 groupId: hydrography
 group: Hydrography
 shortHelpString: NULL
