--- a/algorithms/vector/VariableLengthTransects.yml
+++ b/algorithms/vector/VariableLengthTransects.yml
@@ -1,4 +1,4 @@
-displayName: Variable length transects
+displayName: Variable Length Transects
 groupId: fctvectortools
 group: Tools for Vector
 shortHelpString: NULL
