--- a/plugin/algorithms/spatial_components/PolygonSkeleton.yml
+++ b/plugin/algorithms/spatial_components/PolygonSkeleton.yml
@@ -1,5 +1,5 @@
 displayName: Polygon Skeleton
-groupId: Spatial Components
+groupId: spatialcomponents
 group: Spatial Components
 shortHelpString: NULL
 helpString: NULL
