--- a/plugin/algorithms/spatial_components/ValleyBottom.yml
+++ b/plugin/algorithms/spatial_components/ValleyBottom.yml
@@ -1,5 +1,5 @@
 displayName: Valley Bottom
-groupId: Spatial Components
+groupId: spatialcomponents
 group: Spatial Components
 shortHelpString: NULL
 helpString: NULL
