--- a/plugin/algorithms/vector/PointsMedialAxis.yml
+++ b/plugin/algorithms/vector/PointsMedialAxis.yml
@@ -1,5 +1,5 @@
 displayName: Points Medial Axis
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
