--- a/plugin/algorithms/vector/SetMCoordFromMeasureField.yml
+++ b/plugin/algorithms/vector/SetMCoordFromMeasureField.yml
@@ -1,5 +1,5 @@
 displayName: Set M Coordinate From Measure Field
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
