--- a/plugin/algorithms/vector/LineMidpoints.yml
+++ b/plugin/algorithms/vector/LineMidpoints.yml
@@ -1,5 +1,5 @@
 displayName: Line Midpoints
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
