--- a/plugin/algorithms/vector/LineStringBufferByM.yml
+++ b/plugin/algorithms/vector/LineStringBufferByM.yml
@@ -1,5 +1,5 @@
 displayName: LineString Buffer By M
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
