--- a/plugin/algorithms/vector/PointsAlongPolygon.yml
+++ b/plugin/algorithms/vector/PointsAlongPolygon.yml
@@ -1,5 +1,5 @@
 displayName: Points Along Polygon
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
