--- a/plugin/algorithms/vector/ProjectPointOnNearestLine.yml
+++ b/plugin/algorithms/vector/ProjectPointOnNearestLine.yml
@@ -1,5 +1,5 @@
 displayName: Project Points On Nearest Line
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
