--- a/plugin/algorithms/vector/RandomPoissonDiscSamples.yml
+++ b/plugin/algorithms/vector/RandomPoissonDiscSamples.yml
@@ -1,5 +1,5 @@
 displayName: Random Poisson Disc Samples
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
