--- a/plugin/algorithms/vector/RegularHexSamples.yml
+++ b/plugin/algorithms/vector/RegularHexSamples.yml
@@ -1,5 +1,5 @@
 displayName: Regular Hex Samples
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
