--- a/plugin/algorithms/vector/SciPyVoronoiPolygons.yml
+++ b/plugin/algorithms/vector/SciPyVoronoiPolygons.yml
@@ -1,5 +1,5 @@
 displayName: Voronoi Polygons
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
