--- a/plugin/algorithms/vector/TransectByPoint.yml
+++ b/plugin/algorithms/vector/TransectByPoint.yml
@@ -1,5 +1,5 @@
 displayName: Transect By Point
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
