--- a/plugin/algorithms/vector/TransformCoordinateByExpression.yml
+++ b/plugin/algorithms/vector/TransformCoordinateByExpression.yml
@@ -1,5 +1,5 @@
 displayName: Transform Coordinate Z|M By Expression
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
