--- a/plugin/algorithms/vector/UniquePoints.yml
+++ b/plugin/algorithms/vector/UniquePoints.yml
@@ -1,5 +1,5 @@
 displayName: Unique Points
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
