--- a/plugin/algorithms/vector/VariableLengthTransects.yml
+++ b/plugin/algorithms/vector/VariableLengthTransects.yml
@@ -1,5 +1,5 @@
 displayName: Variable Length Transects
-groupId: fctvectortools
+groupId: vector
 group: Tools for Vector
 shortHelpString: NULL
 helpString: NULL
