--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,5 +4,6 @@ pylint>=1.9.4
 mkdocs>=1.0.4
 mkdocs-material>=3.3.0
 python-markdown-math>=0.6
+Jinja2==2.10
 pybtex==0.22.2
-git+https://github.com/tramebleue/mdx-bib#egg=mdx-bib
+git+https://github.com/tramebleue/mdx_bib#egg=mdx_bib
