--- a/plugin/algorithms/hydrography/FixLinkOrientation.yml
+++ b/plugin/algorithms/hydrography/FixLinkOrientation.yml
@@ -1,6 +1,5 @@
 displayName: Check/Fix Link Orientation
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
