--- a/plugin/algorithms/hydrography/LongestPathInDirectedGraph.yml
+++ b/plugin/algorithms/hydrography/LongestPathInDirectedGraph.yml
@@ -1,6 +1,5 @@
 displayName: Longest Path in Directed Graph
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
