--- a/plugin/algorithms/hydrography/ReverseFlowDirection.yml
+++ b/plugin/algorithms/hydrography/ReverseFlowDirection.yml
@@ -1,6 +1,5 @@
 displayName: Reverse Flow Direction
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
