--- a/plugin/algorithms/hydrography/SelectConnectedComponents.yml
+++ b/plugin/algorithms/hydrography/SelectConnectedComponents.yml
@@ -1,6 +1,5 @@
 displayName: Select Connected Links
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
