--- a/plugin/algorithms/hydrography/StrahlerOrder.yml
+++ b/plugin/algorithms/hydrography/StrahlerOrder.yml
@@ -1,6 +1,5 @@
 displayName: Horton-Strahler Stream Order
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
