--- a/plugin/algorithms/metrics/AggregateFeatures.yml
+++ b/plugin/algorithms/metrics/AggregateFeatures.yml
@@ -1,6 +1,5 @@
 displayName: Hubert-Kehagias Aggregation
-groupId: metrics
-group: Metrics
+group: metrics
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
