--- a/plugin/algorithms/metrics/LineStringZSlope.yml
+++ b/plugin/algorithms/metrics/LineStringZSlope.yml
@@ -1,6 +1,5 @@
 displayName: LineStringZ Slope
-groupId: metrics
-group: Metrics
+group: metrics
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
