--- a/plugin/algorithms/raster/BinaryClosing.yml
+++ b/plugin/algorithms/raster/BinaryClosing.yml
@@ -1,6 +1,5 @@
 displayName: Binary Closing
-groupId: raster
-group: Tools for Rasters
+group: raster
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
