--- a/plugin/algorithms/spatial_components/ValleyCenterLine.yml
+++ b/plugin/algorithms/spatial_components/ValleyCenterLine.yml
@@ -1,6 +1,5 @@
 displayName: Valley Center Line
-groupId: spatialcomponents
-group: Spatial Components
+group: spatialcomponents
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
