--- a/plugin/algorithms/terrain/Watershed.yml
+++ b/plugin/algorithms/terrain/Watershed.yml
@@ -1,6 +1,5 @@
 displayName: Watershed Analysis
-groupId: terrain
-group: Terrain Analysis
+group: terrain
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
