--- a/plugin/algorithms/vector/ProjectPointOnNearestLine.yml
+++ b/plugin/algorithms/vector/ProjectPointOnNearestLine.yml
@@ -1,6 +1,5 @@
 displayName: Project Points On Nearest Line
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
