--- a/plugin/algorithms/vector/RegularHexSamples.yml
+++ b/plugin/algorithms/vector/RegularHexSamples.yml
@@ -1,6 +1,5 @@
 displayName: Regular Hex Samples
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
