--- a/plugin/algorithms/vector/TransformCoordinateByExpression.yml
+++ b/plugin/algorithms/vector/TransformCoordinateByExpression.yml
@@ -1,6 +1,5 @@
 displayName: Transform Coordinate Z|M By Expression
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
