--- a/plugin/algorithms/vector/VariableLengthTransects.yml
+++ b/plugin/algorithms/vector/VariableLengthTransects.yml
@@ -1,6 +1,5 @@
 displayName: Variable Length Transects
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
