--- a/plugin/algorithms/hydrography/IdentifyNetworkNodes.yml
+++ b/plugin/algorithms/hydrography/IdentifyNetworkNodes.yml
@@ -1,6 +1,5 @@
 displayName: Identify Network Nodes
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
