--- a/plugin/algorithms/hydrography/LengthOrder.yml
+++ b/plugin/algorithms/hydrography/LengthOrder.yml
@@ -1,6 +1,5 @@
 displayName: Hack (Length-wise) Stream Order
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
