--- a/plugin/algorithms/hydrography/RasterizeStreamNetwork.yml
+++ b/plugin/algorithms/hydrography/RasterizeStreamNetwork.yml
@@ -1,6 +1,5 @@
 displayName: Rasterize Stream Network
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
