--- a/plugin/algorithms/hydrography/UpstreamChannelLength.yml
+++ b/plugin/algorithms/hydrography/UpstreamChannelLength.yml
@@ -1,6 +1,5 @@
 displayName: Upstream Channel Length
-groupId: hydrography
-group: Hydrography
+group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
