--- a/plugin/algorithms/metrics/OrthogonalTransects.yml
+++ b/plugin/algorithms/metrics/OrthogonalTransects.yml
@@ -1,6 +1,5 @@
 displayName: Orthogonal Transects
-groupId: metrics
-group: Metrics
+group: metrics
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
