--- a/plugin/algorithms/metrics/PlanformMetrics.yml
+++ b/plugin/algorithms/metrics/PlanformMetrics.yml
@@ -1,6 +1,5 @@
 displayName: Planform Metrics
-groupId: metrics
-group: Metrics
+group: metrics
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
