--- a/plugin/algorithms/raster/ApplyMask.yml
+++ b/plugin/algorithms/raster/ApplyMask.yml
@@ -1,6 +1,5 @@
 displayName: Apply Mask
-groupId: raster
-group: Tools for Rasters
+group: raster
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
