--- a/plugin/algorithms/raster/DifferentialRasterThreshold.yml
+++ b/plugin/algorithms/raster/DifferentialRasterThreshold.yml
@@ -1,6 +1,5 @@
 displayName: Differential Raster Threshold
-groupId: raster
-group: Tools for Rasters
+group: raster
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
