--- a/plugin/algorithms/raster/FocalMean.yml
+++ b/plugin/algorithms/raster/FocalMean.yml
@@ -1,6 +1,5 @@
 displayName: Focal Mean
-groupId: raster
-group: Tools for Rasters
+group: raster
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
