--- a/plugin/algorithms/raster/RasterInfo.yml
+++ b/plugin/algorithms/raster/RasterInfo.yml
@@ -1,6 +1,5 @@
 displayName: Raster Info
-groupId: raster
-group: Tools for Rasters
+group: raster
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
