--- a/plugin/algorithms/spatial_components/DisaggregatePolygon.yml
+++ b/plugin/algorithms/spatial_components/DisaggregatePolygon.yml
@@ -1,6 +1,5 @@
 displayName: Disaggregate Polygon
-groupId: spatialcomponents
-group: Spatial Components
+group: spatialcomponents
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
