--- a/plugin/algorithms/spatial_components/PolygonSkeleton.yml
+++ b/plugin/algorithms/spatial_components/PolygonSkeleton.yml
@@ -1,6 +1,5 @@
 displayName: Polygon Skeleton
-groupId: spatialcomponents
-group: Spatial Components
+group: spatialcomponents
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
