--- a/plugin/algorithms/terrain/DetrendDEM.yml
+++ b/plugin/algorithms/terrain/DetrendDEM.yml
@@ -1,6 +1,5 @@
 displayName: Relative DEM (Topological)
-groupId: terrain
-group: Terrain Analysis
+group: terrain
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
