--- a/plugin/algorithms/terrain/FlowAccumulation.yml
+++ b/plugin/algorithms/terrain/FlowAccumulation.yml
@@ -1,6 +1,5 @@
 displayName: Flow Accumulation
-groupId: terrain
-group: Terrain Analysis
+group: terrain
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
