--- a/plugin/algorithms/terrain/StreamToFeature.yml
+++ b/plugin/algorithms/terrain/StreamToFeature.yml
@@ -1,6 +1,5 @@
 displayName: Vectorize Streams
-groupId: terrain
-group: Terrain Analysis
+group: terrain
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
