--- a/plugin/algorithms/vector/LineStringBufferByM.yml
+++ b/plugin/algorithms/vector/LineStringBufferByM.yml
@@ -1,6 +1,5 @@
 displayName: LineString Buffer By M
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
