--- a/plugin/algorithms/vector/PointsAlongPolygon.yml
+++ b/plugin/algorithms/vector/PointsAlongPolygon.yml
@@ -1,6 +1,5 @@
 displayName: Points Along Polygon
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
