--- a/plugin/algorithms/vector/PointsMedialAxis.yml
+++ b/plugin/algorithms/vector/PointsMedialAxis.yml
@@ -1,6 +1,5 @@
 displayName: Points Medial Axis
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
