--- a/plugin/algorithms/vector/RandomPoissonDiscSamples.yml
+++ b/plugin/algorithms/vector/RandomPoissonDiscSamples.yml
@@ -1,6 +1,5 @@
 displayName: Random Poisson Disc Samples
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
