--- a/plugin/algorithms/vector/SetMCoordFromMeasureField.yml
+++ b/plugin/algorithms/vector/SetMCoordFromMeasureField.yml
@@ -1,6 +1,5 @@
 displayName: Set M Coordinate From Measure Field
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
