--- a/plugin/algorithms/vector/TransectByPoint.yml
+++ b/plugin/algorithms/vector/TransectByPoint.yml
@@ -1,6 +1,5 @@
 displayName: Transect By Point
-groupId: vector
-group: Tools for Vector
+group: vector
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
