--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,7 @@ nav:
       - algorithms/raster/RasterInfo.md
     - Tools for Vectors:
       - Index: algorithms/vector/index.md
+      - algorithms/vector/DistanceToOtherLayer.md
       - algorithms/vector/LineMidpoints.md
       - algorithms/vector/LineStringBufferByM.md
       - algorithms/vector/PointsAlongPolygon.md
