Autodoc Model Algorithms

--- a/plugin/algorithms/spatial_components/ValleyCenterLine.yml
+++ b/plugin/algorithms/spatial_components/ValleyCenterLine.yml
@@ -39,7 +39,7 @@ parameters:
     description: |
       Distance between points on the input polygon sides to compute the
       Voronoi polygons. The smaller the distance, the smoother the result will be.
-  valleycenterline:
+  Valley Centerline:
     type: LineString
     description:
       Resulting centerline.
