Tidying and small fixes

--- a/fct/algorithms/hydrography/PrincipalStem.yml
+++ b/fct/algorithms/hydrography/PrincipalStem.yml
@@ -1,9 +1,8 @@
-displayName: Upstream Channel Length
+displayName: Principal Stem
 group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
 tags:
   - hydrography
-  - graph
-  - metric
+  - network
