--- a/fct/algorithms/hydrography/StrahlerOrder.yml
+++ b/fct/algorithms/hydrography/StrahlerOrder.yml
@@ -1,4 +1,4 @@
-displayName: Horton-Strahler Stream Order
+displayName: Strahler Stream Order
 group: hydrography
 shortHelpString: NULL
 helpString: NULL
