--- a/fct/algorithms/hydrography/TotalUpstreamChannelLength.yml
+++ b/fct/algorithms/hydrography/TotalUpstreamChannelLength.yml
@@ -1,8 +1,9 @@
-displayName: Export Main Drain
+displayName: Total Upstream Channel Length
 group: hydrography
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
 tags:
   - hydrography
-  - network
+  - graph
+  - metric
