--- a/fct/algorithms/referencing/MeasureNetworkFromOutlet.yml
+++ b/fct/algorithms/referencing/MeasureNetworkFromOutlet.yml
@@ -1,5 +1,5 @@
 displayName: Measure Network from Outlet
-group: hydrography
+group: referencing
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
