--- a/fct/algorithms/terrain/FillDepressions.yml
+++ b/fct/algorithms/terrain/FillDepressions.yml
@@ -1,8 +1,8 @@
-displayName: Distance To Stream Network
+displayName: Fill Depressions
 group: terrain
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
 tags:
-  - raster
-  - nearest
+  - priority flood
+  - preprocessing
