Working BurnFill implementation

--- a/fct/algorithms/terrain/BurnFill.yml
+++ b/fct/algorithms/terrain/BurnFill.yml
@@ -1,4 +1,4 @@
-displayName: BurnFill Depressions
+displayName: Burn Streams And Fill Depressions
 group: terrain
 shortHelpString: NULL
 helpString: NULL
