Axis Transform for points

--- a/fct/algorithms/referencing/PointAxisTransform.yml
+++ b/fct/algorithms/referencing/PointAxisTransform.yml
@@ -1,4 +1,4 @@
-displayName: Axis Transform (LineString)
+displayName: Axis Transform (Point)
 group: referencing
 shortHelpString: NULL
 helpString: NULL
