FIXES for Complex Network

--- a/fct/algorithms/hydrography/FixLinkOrientation.yml
+++ b/fct/algorithms/hydrography/FixLinkOrientation.yml
@@ -1,4 +1,4 @@
-displayName: Check/Fix Link Orientation
+displayName: Fix Link Orientation
 group: hydrography
 summary: |
   Check links are oriented downslope.
