Improvements of existing algorithm

--- a/fct/algorithms/raster/BurnLineStringZ.yml
+++ b/fct/algorithms/raster/BurnLineStringZ.yml
@@ -1,8 +1,10 @@
-displayName: Burn LineString Z
+displayName: Burn LineString Coordinate
 group: raster
 shortHelpString: NULL
 helpString: NULL
 helpUrl: NULL
 tags:
   - z
+  - m
+  - burn
   - preprocess
