--- a/fct/algorithms/hydrography/SelectConnectedComponents.yml
+++ b/fct/algorithms/hydrography/SelectConnectedComponents.yml
@@ -1,4 +1,4 @@
-displayName: Select Connected Links
+displayName: Select Connected Streams
 group: hydrography
 shortHelpString: NULL
 helpString: NULL
