Signed Distance To LineString

--- a/fct/algorithms/terrain/SignedShortestDistance.yml
+++ b/fct/algorithms/terrain/SignedShortestDistance.yml
@@ -1,4 +1,4 @@
-displayName: Shortest Distance From LineString
+displayName: Signed Shortest Distance From LineString
 group: terrain
 shortHelpString: NULL
 helpString: NULL
