--- a/fct/algorithms/hydrography/SelectConnectedComponents.yml
+++ b/fct/algorithms/hydrography/SelectConnectedComponents.yml
@@ -1,4 +1,4 @@
-displayName: Select Connected Streams
+displayName: Select Connected Reaches
 group: hydrography
 shortHelpString: NULL
 helpString: NULL
