--- a/fct/workflows/spatialcomponents/OrientedCenterline.yml
+++ b/fct/workflows/spatialcomponents/OrientedCenterline.yml
@@ -1,7 +1,61 @@
-displayName: Oriented centerline
+displayName: Oriented Centerline
 group: spatialcomponents
-shortHelpString: NULL
-helpString: NULL
-helpUrl: NULL
+summary: |
+  Oriented center-line (ie. medial axis) of the input polygons based on an auxiliary
+  stream network and a DEM.
+description: |
+  Compute the medial axis of a polygon and orient lines from upstream to downstream with provided DEM. 
+  Useful for computing centerlines of a valley bottom or any other 
+  polygon for which you have a corresponding stream network.
+
+  If a stream network is not available for your polygon (ex. historical channel), it is possible to 
+  use instead a created LineString which cut the polygon boundaries upstream and downstream.
+
+  Algorithm:
+  
+      Intersect the input polygon boundaries with the stream network
+      Keep the most distant resulting points (upstream and downstream points)
+      Cut the input polygon boundaries with the upstream and downstream points (get two polygon sides)
+      Compute Voronoi polygons with points on the sides and dissolve it on each side
+      Cut the Voronoi lines with the input polygon
+      Remove duplicate lines
+      Drape lines on DEM
+      Check/Fix links orientation
+      
 tags:
-  - hydrography
+  - vector
+  - polygon
+  - medial axis
+  - disaggregation
+  - model
+  - centerline
+  - valley
+  - line orientation
+  - dem
+
+parameters:
+  polygon:
+    type: Polygon
+    description:
+      Polygon to compute the centerline.
+  mnt:
+    type: Raster
+    description:
+      Digital Elevation Model.
+  streamnetwork:
+    type: LineString
+    description: |
+      Stream network to compute the upstream and downstream points.
+      ex. french BDCarthage.
+  disaggregationdistance:
+    type: Number
+    description: |
+      Distance between points on the input polygon sides to compute the
+      Voronoi polygons. The smaller the distance, the smoother the result will be.
+  Oriented centerline:
+    type: LineString
+    description:
+      Resulting centerline.
+seealso:
+  - "[PolygonCenterLine](../../../algorithms/spatial_components/PolygonCenterLine/)"
+  - "[ValleyCenterLine](../../../algorithms/spatial_components/ValleyCenterLine/)"
