ValleyCenterLine for network

--- a/fct/algorithms/spatial_components/ValleyCenterLine.yml
+++ b/fct/algorithms/spatial_components/ValleyCenterLine.yml
@@ -4,12 +4,14 @@ summary: |
   Center-line (ie. medial axis) of the input polygons based on an auxiliary
   stream network.
 description: |
-  Compute the medial axis of a polygon. 
+  Compute the medial axis of one or multiple polygon(s). 
   Useful for computing centerlines of a valley bottom or any other 
   polygon for which you have a corresponding stream network.
 
   If a stream network is not available for your polygon (ex. historical channel), it is possible to 
   use instead a created LineString which cut the polygon boundaries upstream and downstream.
+
+  The polygons and the stream network features are linked using a common attribute (like a FID). 
 
   Algorithm:
   
@@ -19,6 +21,12 @@ description: |
       Compute Voronoi polygons with points on the sides and dissolve it on each side
       Cut the Voronoi lines with the input polygon
       Remove duplicate lines
+      Smooth result
+    
+  Advices:
+
+      You can apply a small buffer on your polygons to avoid network going out of the polygon too many times increasing drastically the computing time.
+      You can also extend the network lines to be sure they cut the polygons upstream and downstream.
       
 tags:
   - vector
@@ -29,21 +37,29 @@ tags:
   - centerline
   - valley
 parameters:
-  polygon:
+  POLYGON:
     type: Polygon
     description:
       Polygon to compute the centerline.
-  streamnetwork:
+  NETWORK:
     type: LineString
     description: |
       Stream network to compute the upstream and downstream points.
       ex. french BDCarthage.
-  disaggregationdistance:
+  STEP:
     type: Number
     description: |
       Distance between points on the input polygon sides to compute the
       Voronoi polygons. The smaller the distance, the smoother the result will be.
-  Valley Centerline:
+  POLY_AXIS_FID:
+    type: Field
+    description: |
+      Field containing the polygons and axis FID attributes.
+  AXIS_FID:
+    type: Field
+    description: |
+      Field containing the polygons and axis FID attributes.
+  CENTERLINE:
     type: LineString
     description:
       Resulting centerline.
